# shardplate_3d_print

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: example_config.json  generate_blender.py
src/shardplate_generator/: __init__.py  cli.py  config.py  generator.py
src/shardplate_generator/armor_pieces/: __init__.py  base.py  chest.py  cuisses.py  gauntlets.py  greaves.py  helmet.py  pauldrons.py  sabatons.py  vambraces.py
src/shardplate_generator/utils/: __init__.py  blender_utils.py  measurements.py  strap_system.py
tests/: __init__.py  test_config.py  test_measurements.py
